--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@fortawesome/fontawesome-svg-core": "6.5.1",
     "@fortawesome/free-solid-svg-icons": "6.5.1",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "@hookform/resolvers": "^3.3.4",
+    "@hookform/resolvers": "3.3.4",
     "axios": "1.6.7",
     "framer-motion": "11.0.5",
     "react": "18.2.0",
