--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "serve -s dist",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -24,6 +25,7 @@
     "react-hook-form": "7.50.1",
     "react-icons": "5.0.1",
     "react-router-dom": "6.22.3",
+    "serve": "14.2.1",
     "zod": "3.22.4"
   },
   "devDependencies": {
@@ -36,6 +38,6 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.5",
     "typescript": "5.2.2",
-    "vite": "5.0.8"
+    "vite": "5.1.6"
   }
 }
